--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>PORTFOLIO</title>
+    <title>Pablopicasso Portfolio</title>
   </head>
 
   <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="120">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
     <script
